# Path_Planning_Simulation_with_Gazebo_Dex

./: README.md  package.xml  setup.cfg  setup.py
launch/: sen771.launch.py
matlab/: SEN771_Project.m  SEN771_Project_v2.m  SEN771_Project_v5.m  SEN771_Project_v6.m  SEN771_Project_v7_fixed.m  SEN771_Project_v7b.m  SEN771_Project_v7b_1.m  SEN771_Project_v8.m
rviz/: sen771.rviz
scripts/: generate_world.py
sen771_agvc/: debug_node.py  monitor_node.py  planner_node.py
worlds/: sen771_world.sdf  sen771_world_template.sdf
